# FPS_Test_OpenGL

./: .gitignore  CMakeLists.txt  README.md  collaborators.md
lib/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/src/: window.c
src/: main.cpp
